--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@ org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Mod Properties
-mod_id = example
-mod_name = Example
+mod_id = customdurability
+mod_name = Custom Durability
 mod_version = 0.1.0+1.19.4
-mod_description = An Example Mod
+mod_description = Custom Durability
 mod_author = GravityIO
-mod_sources = https://github.com/GravityCY/Example
+mod_sources = https://github.com/GravityCY/CustomDurability
 mod_license = MIT
 
 # Fabric
@@ -16,3 +16,7 @@ yarn_version = 1.19.4+build.2
 loader_version = 0.14.22
 
 # Dependencies
+fabric_version=0.87.0+1.19.4
+modmenu_version=6.2.2
+yacl_version=3.1.0+1.19.4
+glib_version=1.2.13+1.19.4
