--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "fabric-loom" version "1.3-SNAPSHOT"
     id "maven-publish"
+    id "com.modrinth.minotaur" version "2.+"
 }
 
 version = project.mod_version
@@ -9,6 +10,22 @@ group = "me.gravityio"
 project.dependencies.add("minecraft", "com.mojang:minecraft:${project.minecraft_version}")
 project.dependencies.add("mappings", "net.fabricmc:yarn:${project.project.yarn_version}:v2")
 project.dependencies.add("modImplementation", "net.fabricmc:fabric-loader:${project.loader_version}")
+
+modrinth {
+    token = System.getenv("MODRINTH_UPLOAD")
+    projectId = project.mod_id
+    versionName = project.mod_name + " " + project.mod_version
+    versionNumber = project.mod_version
+    versionType = "release"
+    uploadFile = remapJar
+    gameVersions = ["1.19.4"]
+    loaders = ["fabric"]
+    dependencies {
+        required.project "fabric-api"
+        required.project "yacl"
+        optional.project "modmenu"
+    }
+}
 
 repositories {
     mavenLocal()
@@ -20,6 +37,7 @@ repositories {
     }
     maven { url = "https://jitpack.io"	}
 }
+
 dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:$project.fabric_version"
     // Mod Menu
