--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ tasks.register('publishCurseForge', TaskPublishCurseForge) {
 
     def mainFile = upload(1023420, remapJar)
     mainFile.changelog = changelog
-    mainFile.addGameVersion("1.20.2")
+    mainFile.addGameVersion("1.20.2", "1.20.3", "1.20.4")
     mainFile.displayName = "${mod_name} ${mod_version}"
     mainFile.addModLoader("Fabric")
     mainFile.releaseType = "release"
@@ -60,7 +60,7 @@ modrinth {
     versionNumber = project.mod_version
     versionType = "release"
     uploadFile = remapJar
-    gameVersions = ["1.20.2"]
+    gameVersions = ["1.20.2", "1.20.3", "1.20.4"]
     loaders = ["fabric"]
     dependencies {
         required.project "fabric-api"
