--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ tasks.register('publishCurseForge', TaskPublishCurseForge) {
 
     def mainFile = upload(1023420, remapJar)
     mainFile.changelog = changelog
-    mainFile.addGameVersion("1.20.2", "1.20.3", "1.20.4")
+    mainFile.addGameVersion("1.20.5")
     mainFile.displayName = "${mod_name} ${mod_version}"
     mainFile.addModLoader("Fabric")
     mainFile.releaseType = "release"
@@ -60,11 +60,15 @@ modrinth {
     versionNumber = project.mod_version
     versionType = "release"
     uploadFile = remapJar
-    gameVersions = ["1.20.2", "1.20.3", "1.20.4"]
+    gameVersions = ["1.20.5"]
     loaders = ["fabric"]
     dependencies {
         required.project "fabric-api"
     }
+}
+
+loom {
+    accessWidenerPath = file("src/main/resources/customdurability.accesswidener")
 }
 
 repositories {
@@ -82,7 +86,7 @@ repositories {
 dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:$project.fabric_version"
 
-    // Mixin Extrass
+    // Mixin Extras
     implementation("com.github.LlamaLad7:MixinExtras:0.1.1")
     annotationProcessor("com.github.LlamaLad7:MixinExtras:0.1.1")
     include("com.github.LlamaLad7:MixinExtras:0.1.1")
