--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ tasks.register('publishCurseForge', TaskPublishCurseForge) {
     mainFile.displayName = "${mod_name} ${mod_version}"
     mainFile.addModLoader("Fabric")
     mainFile.releaseType = "release"
-    mainFile.addJavaVersion(17);
+    mainFile.addJavaVersion("Java 17");
     def fabricApi = "fabric-api"
     mainFile.addRequirement(fabricApi)
 }
