--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,27 @@
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod Properties
 mod_id = customdurability
 mod_name = Custom Durability
-mod_version = 0.3.0+1.21
+mod_version = 0.5.0
 mod_description = Custom Durability
 mod_author = GravityIO
 mod_sources = https://github.com/GravityCY/CustomDurability
 mod_license = MIT
 
+curseforge_id = 1023420
+modrinth_id = "customdurability"
+
+changelog = - Developing for old Minecraft versions should be easier now, the codebase is now based on stonecutter!
+
 # Fabric
-minecraft_version = 1.21
-yarn_version = 1.21+build.2
 loader_version = 0.15.11
 
 # Dependencies
-fabric_version=0.100.1+1.21
+fabric_version=[VERSIONED]
+parchment_version_mc=[VERSIONED]
+parchment_version=[VERSIONED]
+minecraft_version_range=[VERSIONED]
+minecraft_versions=[VERSIONED]
+java_version=[VERSIONED]
