fix modrnith_id and other

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ mod_sources = https://github.com/GravityCY/CustomDurability
 mod_license = MIT
 
 curseforge_id = 1023420
-modrinth_id = "customdurability"
+modrinth_id = customdurability
 
 changelog = - Developing for old Minecraft versions should be easier now, the codebase is now based on stonecutter!
 
