--- a/stonecutter.gradle
+++ b/stonecutter.gradle
@@ -2,7 +2,13 @@ plugins.apply "dev.kikugie.stonecutter"
 
 stonecutter.active "1.21" /* [SC] DO NOT EDIT */
 
-stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) { 
+stonecutter.registerChiseled tasks.register("chiseledBuild", stonecutter.chiseled) {
     setGroup "project"
     ofTask "build"
 }
+
+stonecutter.registerChiseled tasks.register("chiseledPublish", stonecutter.chiseled) {
+    setGroup "project"
+    ofTask "publishMod"
+}
+
